# todolist

./: pubspec.yaml
.github/workflows/: build.yml
integration_test/: simple_test.dart
lib/: main.dart
lib/comp/: todo_item.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: config.dart  init.dart  types.dart  utils.dart
lib/utils/: common.dart  todo_data_float_window.dart
linux/flutter/: generated_plugins.cmake
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: config.rs  init.rs  mod.rs  types.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/cmake/: cargokit.cmake
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/ios/: rust_lib_todolist.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_todolist.podspec
rust_builder/windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
