[package]
name = "rust_lib_todolist"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.81"
flutter_logger = "0.6.1"
flutter_rust_bridge = "=2.0.0-dev.28"
lazy_static = "1.4.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
